--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 
 
       <section id="main_content">
+      <img src="https://cloud.githubusercontent.com/assets/10064220/5822366/b825b4e0-a0d3-11e4-91a5-4a6d96ddc34f.jpg">
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
