--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 
       <section id="main_content">
          <h3>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d235736.1746042809!2d9.589018369693575!3d40.54210784227897!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12dee994048ceefd%3A0x57bed53ff34cd204!2sTHOLOI+-+prodotti+tipici!5e1!3m2!1sit!2sit!4v1421777305117" width="600" height="450" frameborder="0" style="border:0"></iframe>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 <img src="https://cloud.githubusercontent.com/assets/10064220/5822366/b825b4e0-a0d3-11e4-91a5-4a6d96ddc34f.jpg">
      
