--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>birra fresca per tutti by gianbattista-loi</title>
+    <title>azienda tholoi</title>
   </head>
 
   <body>
@@ -27,7 +27,7 @@
       <header>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <h1>birra fresca per tutti</h1>
+            <h1>AZZIENDA THOLOI</h1>
             <h2></h2>
           </span>
           <span class="left-tail"></span>
