--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <header>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <h1>AZZIENDA THOLOI</h1>
+            <h1>AZIENDA THOLOI</h1>
             <h2></h2>
           </span>
           <span class="left-tail"></span>
